--- a/stealth-wallet-app/src/index.css
+++ b/stealth-wallet-app/src/index.css
@@ -1,3 +1,6 @@
+@import "@fortawesome/fontawesome-free/css/fontawesome.css";
+@import "@fortawesome/fontawesome-free/css/solid.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
